# academic-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SUB_STAGE_6_COMPLETION_SUMMARY.md  install_dependencies.py  path_replacement_results.json  pytest.ini  requirements.txt  run_tests.py  setup_cms.py  test_config_system.py  test_logging_system.py  tox.ini  verify_tests.py  week_resolver_demo_results.json  week_resolver_test_results.json
.claude/: settings.local.json
.taskmaster/: state.json
academic-agent-v2/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
academic-agent-v2/benchmarks/: batch_performance_benchmark.py
academic-agent-v2/config/: academic_agent.yaml
academic-agent-v2/examples/: academic_agent_demo.py  batch_processing_example.py
academic-agent-v2/src/: __init__.py
academic-agent-v2/src/agents/: __init__.py  academic_agent.py  academic_agent.py.backup  agent_config.py  cli.py  plugin_system.py  state_manager.py
academic-agent-v2/src/core/: __init__.py  config.py  config_manager.py  error_handling.py  exceptions.py  logging.py  monitoring.py
academic-agent-v2/src/generators/: __init__.py
academic-agent-v2/src/processors/: __init__.py  pdf_processor.py
academic-agent-v2/src/utils/: file_utils.py
academic-agent-v2/tests/: conftest.py  pytest.ini  test_academic_agent_integration.py  test_batch_processor.py  test_core_config.py  test_core_exceptions.py  test_integration_comprehensive.py  test_poetry_setup.py  test_processors_pdf_processor.py  test_readme.py  test_utils_file_utils.py
agents/: README.md
config/: README.md  academic_agent_config.json.backup  base.yaml  cms_config.yaml  config_manager.py  config_utils.py  consolidation_config.json  development.yaml  example_agent_integration.py  export_system_config.yaml  integration.py  logging_config.yaml  migrate_config.py  production.yaml  quality_assurance_config.json  quality_validation_config.yaml  test.yaml  validate_config.py  week_resolver_config.json
deployment/: .env.example  docker-compose.prod.yml  healthcheck.py
docling-processor/: advanced_pdf_agent.py  convert_pdfs.sh  pdf_processor_agent.py  requirements.txt
monitoring/: README.md  alert_rules.yml  alertmanager.yml  dashboards.py  docker-compose.yml  integration.py  prometheus.yml  prometheus_config.py  recording_rules.yml  requirements.txt  setup_monitoring.py  test_monitoring.py  validation_metrics.py
processors/: README.md  __init__.py  example_usage.py  marker_pdf_processor.py  monitoring.py  pdf_processor_cli.py  (+4 more)
(+221 files in other folders)
